namespace WarpTalk.BillingService.Domain.Enums;

public enum CreditTransactionType
{
    Purchase,
    Consumption,
    Refund,
    Adjustment,
    Expiry,
    TopUp
}
