syntax = "proto3";

option csharp_namespace = "WarpTalk.Shared.Protos";

package billing;

service BillingService {
  // ── Credits ──────────────────────────────────────────────
  // Read credit balance of a workspace
  rpc GetWorkspaceCredits (GetCreditsRequest) returns (GetCreditsResponse);

  // Deduct credits for usage (called by other services)
  rpc ConsumeCredits (ConsumeCreditsRequest) returns (ConsumeCreditsResponse);

  // Add credits (Internal / Admin)
  rpc TopUpCredits (TopUpRequest) returns (GetCreditsResponse);

  // Record AI usage and apply Host-Pays model
  rpc RecordUsage (RecordUsageGrpcRequest) returns (RecordUsageGrpcResponse);

  // Credit transaction history (paginated)
  rpc GetCreditHistory (GetHistoryRequest) returns (CreditHistoryResponse);

  // ── Subscriptions ─────────────────────────────────────────
  // Get active subscription of a workspace
  rpc GetActiveSubscription (GetActiveSubscriptionRequest) returns (SubscriptionResponse);

  // Check feature access limits for a workspace
  rpc GetWorkspaceFeatureAccess (GetFeatureAccessRequest) returns (GetFeatureAccessResponse);

  // WT-263: store a workspace's own (tightening-only) entitlement setting.
  //
  // The workspace owns the SCREEN; billing owns the DECISION. The self-service value has to reach
  // the EntitlementResolver, because "a workspace may tighten but never loosen" can only be
  // enforced where the plan ceiling is known — enforcing it in the service that owns the setting
  // means it holds only for callers that go through that service.
  //
  // This is a WRITE-path call, never on an enforcement path: rejecting it costs an owner a settings
  // save, not a meeting.
  rpc ApplyWorkspaceEntitlementOverrides (ApplyWorkspaceEntitlementOverridesRequest) returns (ApplyWorkspaceEntitlementOverridesResponse);

  // Cancel an active subscription
  rpc CancelSubscription (CancelSubscriptionRequest) returns (SubscriptionResponse);

  // ── Plans ─────────────────────────────────────────────────
  // List all active plans
  rpc GetPlans (GetPlansRequest) returns (GetPlansResponse);

  // Get a single plan by id
  rpc GetPlanById (GetPlanByIdRequest) returns (PlanResponse);

  // ── Payments ─────────────────────────────────────────────
  // Payment / transaction history (paginated)
  rpc GetTransactionHistory (GetHistoryRequest) returns (TransactionHistoryResponse);



  // Process payment events including success, failures, and refunds
  rpc ProcessPaymentEvent (ProcessPaymentEventRequest) returns (ProcessPaymentResponse);
  rpc GetInvoices (GetInvoicesRequest) returns (GetInvoicesResponse);
}

// ─────────────────────────────────────────────────────────────
// Payment Processing
// ─────────────────────────────────────────────────────────────



message ProcessPaymentEventRequest {
  string user_id                 = 1;
  double amount                  = 2;
  string currency                = 3;
  string payment_type            = 4;
  string stripe_session_id       = 5;
  string provider_transaction_id = 6;
  string status                  = 7; // "paid", "failed", "refunded"
  string failure_reason          = 8;
  string workspace_id            = 9;
  string invoice_url             = 10;
  string invoice_pdf             = 11;
  string plan_slug               = 12;
  string billing_cycle           = 13;
}

message ProcessPaymentResponse {
  bool   success       = 1;
  string error_message = 2;
}

message GetInvoicesRequest {
  string workspace_id = 1;
}

message GetInvoicesResponse {
  repeated Invoice items = 1;
}

message Invoice {
  string id                 = 1;
  string stripe_invoice_id  = 2;
  double amount             = 3;
  string currency           = 4;
  string status             = 5;
  string invoice_pdf_url    = 6;
  string hosted_invoice_url = 7;
  string created_at         = 8;
}

// ─────────────────────────────────────────────────────────────
// Credits
// ─────────────────────────────────────────────────────────────

message GetCreditsRequest {
  string workspace_id = 1;
}

message GetCreditsResponse {
  string workspace_id          = 1;
  int32  current_credits       = 2;
  string status                = 3;
  int32  credits_used_this_cycle = 4;
  string current_period_start  = 5; // ISO-8601
  string current_period_end    = 6; // ISO-8601
}

message ConsumeCreditsRequest {
  string workspace_id    = 1;
  int32  amount          = 2;
  string reference_type  = 3;
  string reference_id    = 4; // optional; UUID of the originating resource
}

message ConsumeCreditsResponse {
  bool   success       = 1;
  int32  new_balance   = 2;
  string error_message = 3;
}

message TopUpRequest {
  string workspace_id   = 1;
  int32  amount         = 2;
  string reference_type = 3;
  string reference_id   = 4; // optional; e.g. payment UUID
}

message GetHistoryRequest {
  string workspace_id = 1;
  int32  page_number  = 2; // 1-based
  int32  page_size    = 3; // default: 20
}

message CreditHistoryResponse {
  repeated CreditTransaction items = 1;
  int32 total_count                = 2;
}

message CreditTransaction {
  string id            = 1;
  int32  amount        = 2;  // negative = consumption, positive = top-up
  string type          = 3;  // "consumption" | "top_up"
  string description   = 4;
  string reference_type = 5;
  string reference_id  = 6;
  int32  balance_after = 7;
  string created_at    = 8;  // ISO-8601
}

message RecordUsageGrpcRequest {
  string host_workspace_id  = 1;
  string user_id            = 2;
  string usage_type         = 3;
  string unit               = 4;
  double quantity           = 5;
  int32  credits_consumed   = 6;
  int32  duration_seconds   = 7;
  string translation_room_id = 8;
  string details_json       = 9;
  string segment_id         = 10;
}

message RecordUsageGrpcResponse {
  bool   success       = 1;
  int32  new_balance   = 2;
  string error_message = 3;
}

// ─────────────────────────────────────────────────────────────
// Subscriptions
// ─────────────────────────────────────────────────────────────

message GetActiveSubscriptionRequest {
  string workspace_id = 1;
}

message CancelSubscriptionRequest {
  string workspace_id = 1;
  string reason       = 2;
}

message SubscriptionResponse {
  string subscription_id      = 1;
  string status               = 2;
  string error_message        = 3;
  string plan_id              = 4;
  string plan_name            = 5;
  string workspace_id         = 6;
  int32  credits_remaining    = 7;
  string current_period_start = 8;  // ISO-8601
  string current_period_end   = 9;  // ISO-8601
  bool   auto_renew           = 10;
  string cancelled_at         = 11; // ISO-8601; empty if not cancelled
  string trial_ends_at        = 12; // ISO-8601; empty if not a trial subscription
}

message GetFeatureAccessRequest {
  string workspace_id = 1;
}

// WT-263. Values are sent as strings so one message carries both numeric limits and boolean
// capabilities; billing parses each against the key's declared shape and rejects what it cannot
// read rather than guessing.
message WorkspaceEntitlementOverrideItem {
  string entitlement_key = 1;
  string value           = 2;
}

message ApplyWorkspaceEntitlementOverridesRequest {
  string workspace_id                                = 1;
  repeated WorkspaceEntitlementOverrideItem overrides = 2;
  string set_by_user_id                              = 3;
}

message ApplyWorkspaceEntitlementOverridesResponse {
  bool   accepted      = 1;
  // Populated when a requested value would LOOSEN a limit beyond what the plan allows. The setting
  // is rejected outright rather than silently clamped, so the owner is told their workspace cannot
  // grant itself something it has not bought.
  string error_message = 2;
}

message GetFeatureAccessResponse {
  // WT-263: allow_acl (field 11) removed. It never had a backing column on
  // subscription.plans; WT-262 left it mirroring ai_assistant_enabled as a documented
  // stand-in. The decision is to drop the field rather than add a column.
  //
  // The number is RESERVED, not merely deleted: a future field that reused 11 would be
  // decoded by any still-running older peer as the old allow_acl bool. The RPC having no
  // callers today does not help — the wire number is what a stale binary misreads.
  reserved 11;
  reserved "allow_acl";

  bool   has_active_subscription = 1;
  string plan_tier              = 2;
  int32  max_participants       = 3;
  int32  max_languages          = 4;
  bool   voice_clone_enabled    = 5;
  bool   ai_assistant_enabled   = 6;
  bool   glossary_enabled       = 7;
  bool   dedicated_gpu          = 8;
  string features_json          = 9;
  bool   allow_glossary         = 10;
}

// ─────────────────────────────────────────────────────────────
// Plans
// ─────────────────────────────────────────────────────────────

message GetPlansRequest {
  // Empty – returns all active plans
}

message GetPlansResponse {
  repeated PlanResponse plans = 1;
}

message GetPlanByIdRequest {
  string plan_id = 1;
}

message PlanResponse {
  // WT-263: allow_acl (field 18) removed for the same reason as in
  // GetFeatureAccessResponse — no backing column, and nothing ever populated it here (the
  // mapper only ever set the feature-access copy). Number reserved, same rationale.
  reserved 18;
  reserved "allow_acl";

  string plan_id                = 1;
  string name                   = 2;
  string slug                   = 3;
  string tier                   = 4;
  double price                  = 5;
  string currency               = 6;
  string billing_cycle          = 7;
  int32  credits_per_cycle      = 8;
  int32  max_participants       = 9;
  int32  max_languages          = 10;
  bool   voice_clone_enabled    = 11;
  bool   ai_assistant_enabled   = 12;
  bool   glossary_enabled       = 13;
  bool   dedicated_gpu          = 14;
  string features               = 15; // JSON blob
  int32  sort_order             = 16;
  bool   allow_glossary         = 17;
}

// ─────────────────────────────────────────────────────────────
// Payments
// ─────────────────────────────────────────────────────────────

message TransactionHistoryResponse {
  repeated PaymentTransaction items = 1;
  int32 total_count                 = 2;
}

message PaymentTransaction {
  string id                      = 1;
  string subscription_id         = 2;
  double amount                  = 3;
  double tax_amount              = 4;
  double total_amount            = 5;
  string currency                = 6;
  string payment_method          = 7;
  string provider                = 8;
  string provider_transaction_id = 9;
  string status                  = 10; // pending | paid | failed | refunded
  string failure_reason          = 11;
  string paid_at                 = 12; // ISO-8601; empty if not paid
  string created_at              = 13; // ISO-8601
}
